# EbU

./: .gitignore  README.md  cabal.project  embedding-by-unembedding.cabal  stack.yaml
.github/workflows/: haskell.yml
ebu/: LICENSE  embedding-by-unembedding.cabal
ebu-examples/: embedding-by-unembedding-examples.cabal
ebu-examples/src/Unembedding/Examples/: AppLens.hs  CTS.hs  ELens.hs  FirstOrder.hs  Forall.hs  ILC.hs  Modal.hs  STLC.hs
ebu/src/: Unembedding.hs
ebu/src/Unembedding/: Env.hs
ebu/tests/: Spec.hs  UnembeddingSpec.hs
ebu/tests/Unembedding/: EnvSpec.hs
src/: Unembedding.hs
src/Unembedding/: Env.hs
tests/: UnembeddingSpec.hs
