cabal-version:      2.4
name:               embedding-by-unembedding
version:            0.2.1

license:            BSD-3-Clause
author:             Kazutaka Matsuda, Samantha Frohlich 
maintainer:         kztk@tohoku.ac.jp 

common deps
    build-depends:
        base >= 4.12 && < 4.20,

    default-language: Haskell2010
    ghc-options:
                 -Wall
                 -Wcompat
                 -Widentities
                 -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
                 -Wredundant-constraints
                 -Wnoncanonical-monad-instances
    if impl(ghc >= 8.2)
      ghc-options:       -fhide-source-paths
    if impl(ghc >= 8.4)
      ghc-options:       -Wmissing-export-lists
                         -Wpartial-fields
    if impl(ghc >= 8.8)
      ghc-options:       -Wmissing-deriving-strategies
                         -fwrite-ide-info
                         -hiedir=.hie
    if impl(ghc >= 8.10)
      ghc-options:       -Wunused-packages

library
    import: deps
    exposed-modules:
        Unembedding.Env
        Unembedding

    hs-source-dirs:   src
    default-language: Haskell2010

test-suite tests
  import: deps 
  type: exitcode-stdio-1.0
  main-is: Spec.hs 
  build-depends: 
    embedding-by-unembedding, hspec 
  other-modules:
    UnembeddingSpec, 
    Unembedding.EnvSpec   

  hs-source-dirs: tests
  default-language: Haskell2010